Fixed cards and selector alignments

--- a/components/AppDevelopmentCommon/CardsSection/styles/homepage.scss
+++ b/components/AppDevelopmentCommon/CardsSection/styles/homepage.scss
@@ -81,7 +81,12 @@
 
           @include below-tablet {
             flex-basis: 80%;
+            display: block;
           }
+        }
+
+        @include below-tablet {
+          @include flex(column, flex-start, stretch);
         }
       }
     }
