--- a/components/AppDevelopmentCommon/SvgListSection/Selector/styles.module.scss
+++ b/components/AppDevelopmentCommon/SvgListSection/Selector/styles.module.scss
@@ -1,11 +1,17 @@
 @import 'styles/utils/mixins';
 
+.wrapper {
+  overflow: hidden;
+  width: min(1200px, 100%);
+  margin: 0 auto;
+}
+
 .selector {
-  @include flex(row, space-between, center, wrap);
+  @include flex(row, center, center, wrap);
 
   list-style: none;
-  max-width: 943px;
-  margin: 0 auto 50px;
+  margin-right: -120px;
+  padding: 0;
 }
 
 .item {
@@ -15,6 +21,7 @@
   cursor: pointer;
   position: relative;
   user-select: none;
+  margin: 0 120px 25px 0;
 
   &::after {
     content: '';
@@ -35,5 +42,9 @@
     &::after {
       width: 70px;
     }
+  }
+
+  @include below-tablet {
+    @include fontSize(18px);
   }
 }
